--- a/Hoon/app/src/main/res/layout/activity_present.xml
+++ b/Hoon/app/src/main/res/layout/activity_present.xml
@@ -5,18 +5,20 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/bg"
-    tools:context=".Savehoon">
+    tools:context=".Present">
 
-    <TextView
-        android:id="@+id/textView5"
+    <Space
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="76dp"
-        android:layout_marginEnd="156dp"
-        android:text="SAVE HOON"
-        android:textColor="#F8F5F5"
-        android:textSize="18sp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        tools:layout_editor_absoluteX="154dp"
+        tools:layout_editor_absoluteY="204dp" />
+
+    <ProgressBar
+        android:id="@+id/progressBar"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        tools:layout_editor_absoluteX="170dp"
+        tools:layout_editor_absoluteY="350dp" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
